--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -16,4 +16,20 @@ p {
 
 .navpanel {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+
+}
+
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 23px;
+}
+
+.main {
+  font-size: 14px;
+  color: black;
+  font-weight: bold;
 }
