--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -33,3 +33,9 @@ h3 {
   color: black;
   font-weight: bold;
 }
+
+h4 {
+  font-size: 23px;
+  color: white;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
